--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <header>
+        Header
+    </header>
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running locations, distance and times.
+    </section>
+    <footer>
+        Social media
+    </footer>
 </body>
 </html>
