--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,30 @@
     <meta name="description" content="Love running club for runners in Dublin, Ireland ">
     <meta name="keywords" content="love running, running club, ireland, dublin">
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
     <title>Love Running</title>
 </head>
+
 <body>
     <header>
-        Header
+        <a href="index.html">
+            <h1>Loving Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Galery</a>
+                </li>
+                <li>
+                    <a href="#">Sign Up</a>
+                </li>
+            </ul>
+        </nav>
     </header>
+
     <section>
         Main Image
     </section>
@@ -27,4 +45,5 @@
         Social media
     </footer>
 </body>
+
 </html>
