--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#">Galery</a>
                 </li>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 
                 
