--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
             <h3>Dublin Docklands & Phoenix Park</h3>
         </div>
     </section>
-    <section>
-        Club Ethos
+    <section id="club-ethos">
+        <h1>Why Loving Running With Us?</h1>
+        <div id="right-about">left</div>
+        <div id="left-about">right</div>
+        <div id="center-about">center</div>
     </section>
     <section>
         Running locations, distance and times.
