--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         </div>
     </section>
     <section id="club-ethos">
-        <h1>Why Loving Running With Us?</h1>
+        <h2 id="welcome">Why Loving Running With Us?</h2>
         <div id="left-about">
+
             <div class="left-about-heading">
                 <h2>Feel Healthy</h2>
                 <hr>
@@ -59,8 +60,9 @@
                     you more energetic, more awake and, yes, happier. </p>
             </div>
         </div>
-        
+
         <div id="right-about">
+
             <div class="right-about-heading">
                 <h2> Get Social</h2>
                 <hr>
@@ -73,9 +75,17 @@
                 <hr>
                 <p> Running strengthens your heart by pumping blood more effectively through your body.</p>
             </div>
-            <div id="center-about">center</div>
+        </div>
+
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg">
+
+                </div>
+            </div>
         </div>
     </section>
+
     <section>
         Running locations, distance and times.
     </section>
