--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <section id="times">
         <div>
-            <h2>Urban</h2>
+            <h2>Urban <i class="fa-solid fa-city"></i></h2>
             <h3>Monday</h3>
             <h3>5k</h3>
             <h3>The Marker Hotel</h3>
@@ -96,7 +96,7 @@
         </div>
 
         <div>
-            <h2>Trail</h2>
+            <h2>Trail <i class="fa-solid fa-tree"></i></i></h2>
             <h3>Wednesday</h3>
             <h3>10k</h3>
             <h3>The Phoenix Park</h3>
@@ -104,7 +104,7 @@
         </div>
 
         <div>
-            <h2>Urban</h2>
+            <h2>Urban <i class="fa-solid fa-city"></i></h2>
             <h3>Friday</h3>
             <h3>5k</h3>
             <h3>The Marker Hotel</h3>
@@ -112,7 +112,7 @@
         </div>
 
         <div>
-            <h2>Trail</h2>
+            <h2>Trail <i class="fa-solid fa-tree"></i></i></h2>
             <h3>Saturday</h3>
             <h3>10k</h3>
             <h3>The Phoenix Park</h3>
