--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
 
         <div>
-            <h2>Trail <i class="fa-solid fa-tree"></i></i></h2>
+            <h2>Trail <i class="fa-solid fa-tree"></i></h2>
             <h3>Wednesday</h3>
             <h3>10k</h3>
             <h3>The Phoenix Park</h3>
@@ -112,7 +112,7 @@
         </div>
 
         <div>
-            <h2>Trail <i class="fa-solid fa-tree"></i></i></h2>
+            <h2>Trail <i class="fa-solid fa-tree"></i></h2>
             <h3>Saturday</h3>
             <h3>10k</h3>
             <h3>The Phoenix Park</h3>
@@ -120,7 +120,7 @@
         </div>
 
         <div>
-            <h2>Coffee</h2>
+            <h2>Coffee <i class="fa-solid fa-mug-saucer"></i></h2>
             <h3>Sunday</h3>
             <h3>0k</h3>
             <h3>The Marker Hotel</h3>
@@ -129,7 +129,27 @@
     </section>
 
     <footer>
-        Social media
+        <ul class="social-networks">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page.
+                 (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page.
+                 (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our Youtube page.
+                 (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page.
+                 (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
     <!--Font awesome script-->
     <script src="https://kit.fontawesome.com/7d433a0770.js" crossorigin="anonymous"></script>
