--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Love Running</title>
-</head>
+</head> 
 
 <body>
     <header>
@@ -24,7 +24,7 @@
                     <a href="#">Sign Up</a>
                 </li>
                 <li>
-                    <a href="#">Galery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
