--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,10 @@
         </nav>
     </header>
 
+    <section>
+        <img src="assets/images/man.jpg" alt="picture of a man">
+    </section>
+
     <footer>
         <ul class="social-networks">
             <li>
