--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     <title>Love Running</title>
 </head> 
 
-<body>
+<body> 
     <header>
         <a href="index.html">
             <h1 id="logo">Loving Running</h1>
@@ -35,8 +35,17 @@
         </nav>
     </header>
 
-    <section>
-        <img src="assets/images/man.jpg" alt="picture of a man">
+    <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="Two girls running">
+        <img src="assets/images/girls.jpg" alt="Three girls in the festival">
+        <img src="assets/images/runner3.jpg" alt="Solo man running">
+        <img src="assets/images/man.jpg" alt="Man at charity paint running festival">
+        <img src="assets/images/runner1.jpg" alt="Solo female running through Phoenix park">
+        <img src="assets/images/runner2.jpg" alt="Runners competing in Marathon">
+        <img src="assets/images/runner4.jpg" alt="Solo female runner jogging on a beach">
+        <img src="assets/images/running_gang.jpg" alt="Large group of runners taking part in a marathon on a rainning day">
+        <img src="assets/images/mud-run.jpg" alt="Two women runners taking a mud selfie after the mud runners championship">
+
     </section>
 
     <footer>
